hphp/hack/test/typecheck/lambda/untyped_lambda_strict_mode.php
<?hh

function expect_mixed(mixed $f): void {}
function test(): void {
  expect_mixed($x ==> $x->foo());
}
